syntax = "proto3";

package nodemaster.v1;
option go_package = "the-dev-tools/services/gen/nodemaster/v1;nodemasterv1";
import "google/protobuf/any.proto";
import "nodestatus/v1/nodestatus.proto";

service NodeMasterService {
  rpc Run (NodeMasterServiceRunRequest) returns (stream NodeMasterServiceRunResponse);
}

message NodeMasterServiceRunRequest {
  string id = 1;
  string start_node_id = 2;
  map<string, Node> nodes = 3;
  map<string, google.protobuf.Any> vars = 4;
}

message Node {
  string id = 1;
  string type = 2;

  string owner_id = 3;
  string group_id = 4;
  google.protobuf.Any data = 5;
  Edges edges = 6;
}


message Edges {
  map<string, string> in_nodes = 1;
  map<string, string> out_nodes = 2;
}

message NodeMasterServiceRunResponse {
  string msg = 1;
  nodestatus.v1.NodeStatus node_update = 2;
}

